@@ -1,3 +1,7 @@
+2010-01-26 Fred Kiefer <fredkiefer@gmx.de>
+
+	* Source/CFPropertyList.m: Fill in a bit more code.
+
 2010-01-24 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Headers/CoreFoundation/CoreFoundation.h:
